# rpminspect

./: meson.build  meson_options.txt
